Refactor test-gen-plugin maven plugin
- More idiomatic java code usage
- Avoid resource leaks on file operations
- Avoid usage of deprecated API